--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfólio Roaney Adami</title>
+    <link rel="stylesheet" href="estilos/style.css">
+    <link rel="shortcut icon" href="favicon.svg" type="image/svg">
 </head>
 <body>
-    
+    <header>
+        
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
+    <script src="scripts/script.js"></script>
 </body>
 </html>
