--- a/index.html
+++ b/index.html
@@ -12,11 +12,21 @@
     <header>
         <nav id="menu">
             <ul>
-                <li><a href="#"><i class="fa-solid fa-house"></i></a></li>
-                <li><a href="#"><i class="fa-solid fa-brain"></i></a></li>
-                <li><a href="#"><i class="fa-solid fa-graduation-cap"></i></a></li>
-                <li><a href="#"><i class="fa-solid fa-trowel-bricks"></i></a></li>
-                <li><a href="#"><i class="fa-solid fa-moon"></i></a></li>
+                <li>
+                    <a href="#"><i class="fa-solid fa-house"></i></a>
+                </li>
+                <li>
+                    <a href="#"><i class="fa-solid fa-brain"></i></a>
+                </li>
+                <li>
+                    <a href="#"><i class="fa-solid fa-graduation-cap"></i></a>
+                </li>
+                <li>
+                    <a href="#"><i class="fa-solid fa-trowel-bricks"></i></a>
+                </li>
+                <li>
+                    <a href="#"><i class="fa-solid fa-moon"></i></a>
+                </li>
             </ul>
         </nav>
     </header>
