--- a/index.html
+++ b/index.html
@@ -31,7 +31,24 @@
         </nav>
     </header>
     <main>
+        <section id="ficha">
+            <img src="imagens/guanabara-perfil.jpg" alt="#" class="foto">
+            <h1>
+                Roaney Faria Adami
+            </h1>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia consectetur est temporibus molestiae, dicta doloremque excepturi tempora? Perferendis quibusdam ad officia ipsa quae ab et officiis architecto. Amet, in temporibus? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio nulla mollitia tenetur voluptatum iusto voluptate, exercitationem voluptatibus labore sit quod doloribus pariatur ad quos asperiores nisi inventore aliquam cum veniam!
+            </p>
+            <div id="social">
+                <a href="#"><i class="fa-brands fa-square-linkedin fa-lg"></i></a>
+                <a href="https://github.com/roaney" target="_blank" rel="external"><i class="fa-brands fa-github fa-lg"></i></a>
+                <a href="#"><i class="fa-brands fa-youtube fa-lg"></i></a>
+                <a href="#"><i class="fa-brands fa-instagram fa-lg"></i></a>
+            </div>
+        </section>
+        <section id="detalhes">
 
+        </section>
     </main>
     <footer>
 
