--- a/index.html
+++ b/index.html
@@ -47,7 +47,21 @@
             </div>
         </section>
         <section id="detalhes">
-
+            <article id="skills">
+                <h2>
+                    <i class="fa-solid fa-brain"></i> Minhas Skills
+                </h2>
+            </article>
+            <article id="formacao">
+                <h2>
+                    <i class="fa-solid fa-graduation-cap"></i> Formação
+                </h2>
+            </article>
+            <article id="projetos">
+                <h2>
+                    <i class="fa-solid fa-trowel-bricks"></i> Meus Projetos
+                </h2>
+            </article>
         </section>
     </main>
     <footer>
