--- a/index.html
+++ b/index.html
@@ -51,6 +51,23 @@
                 <h2>
                     <i class="fa-solid fa-brain"></i> Minhas Skills
                 </h2>
+                <div id="skill-container">
+                    <div class="item">
+                        <div class="info">
+                            <span class="nome">
+                                HTML5
+                            </span>
+                            <span class="porcent">
+                                90%
+                            </span>
+                        </div>
+                        <div class="barra">
+                            <div class="progresso" style="width: 90%;">
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </article>
             <article id="formacao">
                 <h2>
