--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <div class="item">
                         <div class="info">
                             <span class="nome">
-                                HTML5
+                                <i class="fa-solid fa-code"></i> HTML5
                             </span>
                             <span class="porcent">
                                 90%
@@ -63,6 +63,111 @@
                         </div>
                         <div class="barra">
                             <div class="progresso" style="width: 90%;">
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="info">
+                            <span class="nome">
+                                <i class="fa-solid fa-code"></i> CSS3
+                            </span>
+                            <span class="porcent">
+                                80%
+                            </span>
+                        </div>
+                        <div class="barra">
+                            <div class="progresso" style="width: 80%;">
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="info">
+                            <span class="nome">
+                                <i class="fa-solid fa-code"></i> JavaScript
+                            </span>
+                            <span class="porcent">
+                                75%
+                            </span>
+                        </div>
+                        <div class="barra">
+                            <div class="progresso" style="width: 75%;">
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="info">
+                            <span class="nome">
+                                <i class="fa-solid fa-code"></i> PHP
+                            </span>
+                            <span class="porcent">
+                                60%
+                            </span>
+                        </div>
+                        <div class="barra">
+                            <div class="progresso" style="width: 60%;">
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="info">
+                            <span class="nome">
+                                <i class="fa-solid fa-person-rays"></i> Comunicação
+                            </span>
+                            <span class="porcent">
+                                65%
+                            </span>
+                        </div>
+                        <div class="barra">
+                            <div class="progresso" style="width: 65%;">
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="info">
+                            <span class="nome">
+                                <i class="fa-solid fa-person-rays"></i> Trabalho em equipe
+                            </span>
+                            <span class="porcent">
+                                80%
+                            </span>
+                        </div>
+                        <div class="barra">
+                            <div class="progresso" style="width: 80%;">
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="info">
+                            <span class="nome">
+                                <i class="fa-solid fa-person-rays"></i> Adaptabilidade
+                            </span>
+                            <span class="porcent">
+                                80%
+                            </span>
+                        </div>
+                        <div class="barra">
+                            <div class="progresso" style="width: 80%;">
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="info">
+                            <span class="nome">
+                                <i class="fa-solid fa-person-rays"></i> Liderança
+                            </span>
+                            <span class="porcent">
+                                75%
+                            </span>
+                        </div>
+                        <div class="barra">
+                            <div class="progresso" style="width: 75%;">
 
                             </div>
                         </div>
